// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Widgets /> should not wrap a widget which is not a grid and has no height 1`] = `
<Widgets
  widgets={
    Array [
      Object {
        "col": 0,
        "row": 0,
        "settings": Object {
          "id": 83535,
          "image": "https://data.shopgate.com/shop_widget_images/23836/92204c0f264ac30d6836994c2fb64eb1.min.jpeg",
        },
        "type": "core-widgets/image",
        "width": 12,
      },
    ]
  }
>
  <div
    className="bc-f7f7f7"
  />
</Widgets>
`;

exports[`<Widgets /> should render a grid if height is defined 1`] = `
<Widgets
  widgets={
    Array [
      Object {
        "col": 0,
        "height": 3,
        "row": 0,
        "settings": Object {
          "id": 83535,
          "image": "https://data.shopgate.com/shop_widget_images/23836/92204c0f264ac30d6836994c2fb64eb1.min.jpeg",
        },
        "type": "core-widgets/image",
        "width": 12,
      },
    ]
  }
>
  <div
    className="bc-f7f7f7"
  />
</Widgets>
`;

exports[`<Widgets /> should render a grid if the widget is of type grid 1`] = `
<Widgets
  widgets={
    Array [
      Object {
        "settings": Object {
          "widgets": Array [
            Object {
              "col": 0,
              "height": 5,
              "row": 0,
              "settings": Object {
                "alt": "",
                "id": "84961",
                "image": "https://data.shopgate.com/shop_widget_images/23836/aedc545959f55e3f73851eca0ed40a75.min.jpeg",
                "link": "/category/",
              },
              "type": "core-widgets/image",
              "width": 12,
            },
          ],
        },
        "type": "core-widgets/widget-grid",
      },
    ]
  }
>
  <div
    className="bc-f7f7f7"
  />
</Widgets>
`;
